--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -1,3 +1,23 @@
 body {
     padding-top: 5rem;
 }
+
+.notification {
+    color: black;
+    padding: 10px;
+    border: 1px solid black;
+    border-radius: 5px;
+    margin-bottom: 15px;
+}
+
+.notification-message {
+    background: #9E9E9E;
+}
+
+.notification-error {
+    background-color: #F44336;
+}
+
+.notification-valid {
+    background: #4CAF50;
+}
